title underline and button as link

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -15,16 +15,12 @@ body {
   scroll-behavior: smooth; 
 }
 
+a {
+  display: block; 
+}
+
 @layer base {
   body {
     @apply text-sm;
-  }
-
-  a {
-    @apply text-blue-600 no-underline;
-  }
-
-  a:hover {
-    @apply text-blue-700 underline underline-offset-1;
   }
 }
