--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -80,3 +80,13 @@ a {
 
 input::-moz {
 }
+/* hide all elements except for hyperlinks in the table of contents */
+.wiki-context-menu * {
+  display: none;
+}
+.wiki-context-menu .wiki-context-menu-link {
+  display: inherit;
+}
+.wiki-context-menu .wiki-context-menu-link:before {
+  content: "› ";
+}
