--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -1,16 +1,95 @@
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
 html,
 body {
-    padding: 0;
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-        Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-    color: inherit;
-    text-decoration: none;
+  padding: 0;
+  margin: 0;
+  font-family: InterVariable, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
+    Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+a {
+  display: block;
+}
+
+@layer base {
+  body {
+    @apply text-sm;
+  }
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 5px;
+  background: #ffffff;
+  outline: none;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
+  @apply bg-holon-blue-900;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  width: 8px;
+  height: 25px;
+  border: 3;
+  @apply bg-holon-blue-500;
+  @apply border-holon-blue-900;
+  @apply rounded-none;
+  @apply appearance-none;
+  --tw-shadow: 2.5px 2.5px 0 0;
+  --tw-shadow-colored: 2.5px 2.5px 0 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000),
+    var(--tw-shadow);
+  cursor: pointer;
+}
+
+.slider:disabled::-webkit-slider-thumb {
+  background-color: grey;
+}
+
+.slider::-moz-range-thumb {
+  width: 8px;
+  height: 25px;
+  border: 3;
+  @apply bg-holon-blue-500;
+  @apply border-holon-blue-900;
+  @apply rounded-none;
+  @apply appearance-none;
+  --tw-shadow: 2.5px 2.5px 0 0;
+  --tw-shadow-colored: 2.5px 2.5px 0 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000),
+    var(--tw-shadow);
+  cursor: pointer;
+}
+
+.slider:disabled::-moz-range-thumb {
+  background-color: grey;
+}
+
+input::-moz {
+}
+/* hide all elements except for hyperlinks in the table of contents */
+.wiki-context-menu * {
+  display: none;
+}
+.wiki-context-menu .wiki-context-menu-link {
+  display: inherit;
+}
+.wiki-context-menu .wiki-context-menu-link:before {
+  content: "› ";
+}
+.wiki-breadcrumbs a {
+  text-decoration: underline;
 }
