--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -1,3 +1,3 @@
-@import './reset.css';
 @import './globals.css';
-@import './fonts.css';
+/* @import './reset.css'; */
+/* @import './fonts.css'; */
