adds interactive image

--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -1,3 +1,4 @@
-@import './globals.css';
+@import "./globals.css";
 /* @import './reset.css'; */
 /* @import './fonts.css'; */
+@import "./interactive-image.css";
