--- a/frontend/styles/storyline.css
+++ b/frontend/styles/storyline.css
@@ -19,10 +19,12 @@
   padding: 1rem;
 }
 .storyline__card {
-  opacity: 0.8;
+  opacity: 0;
+  transform: scale(0.8);
   transition: opacity 0.3s ease-in;
   height: 400px;
   padding: 1rem;
+  animation: storylineFadeIn 0.3s ease-in forwards;
 }
 .storyline__griditem:nth-child(1) {
   width: 40%;
@@ -57,4 +59,15 @@
 .storyline__card:hover img {
   transform: scale(1.1);
   filter: brightness(1);
+}
+@keyframes storylineFadeIn {
+  0% {
+    opacity: 0;
+    transform: scale(0.8);
+  }
+
+  100% {
+    opacity: 0.8;
+    transform: scale(1);
+  }
 }
