--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -1,5 +1,5 @@
 @import "./globals.css";
 /* @import './reset.css'; */
 /* @import './fonts.css'; */
-@import "./interactive-image.css";
+/* @import "./interactive-image.css"; */
 @import "./storyline.css";
