all blocks functioning with Wagtail

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -36,6 +36,38 @@ a {
   h5 {
     @apply text-2xl font-semibold;
   }
+
+  p {
+    @apply text-base;
+  }
+}
+
+.card__bg-gold {
+  @apply bg-holon-gold-200 border-holon-gold-600;
+}
+
+.card__bg-blue {
+  @apply bg-holon-blue-100 border-holon-blue-200;
+}
+
+.card__bg-gray {
+  @apply bg-holon-gray-100 border-holon-gray-300;
+}
+
+.card__bg-purple {
+  @apply bg-holon-purple-100 border-holon-purple-200;
+}
+
+.card__bg-pink {
+  @apply bg-holon-pink-100 border-holon-pink-200;
+}
+
+.block__bg-gray {
+  @apply bg-holon-gray-100;
+}
+
+.block__bg-purple {
+  @apply bg-holon-purple-100;
 }
 
 .slider {
