storyline card icon and make thumbnail mandatory

--- a/frontend/styles/storyline.css
+++ b/frontend/styles/storyline.css
@@ -43,6 +43,9 @@
 .card__bg-pink {
   @apply bg-holon-pink-100;
 }
+.card__bg-orange {
+  @apply bg-holon-orange-100;
+}
 
 @keyframes storylineFadeIn {
   0% {
