--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -1,4 +1,4 @@
 @import "./globals.css";
 /* @import './reset.css'; */
 /* @import './fonts.css'; */
-@import "./storyline.css";
+/* @import "./storyline.css"; */
