--- a/frontend/components/Storyline/StorylineOverview/Storyline.module.css
+++ b/frontend/components/Storyline/StorylineOverview/Storyline.module.css
@@ -7,7 +7,14 @@
 .storyline__card img {
   filter: brightness(0.8);
   transition: all 0.3s ease-in;
+  object-fit: cover;
 }
+
+.medium_card img {
+  object-fit: cover;
+  height: 100%;
+}
+
 .storyline__card:hover img {
   transform: scale(1.1);
   filter: brightness(1);
