--- a/frontend/components/RawHtml/RawHtml.module.css
+++ b/frontend/components/RawHtml/RawHtml.module.css
@@ -12,10 +12,22 @@
 .Container p {
   margin-bottom: 1rem;
 }
+.Container p,
+.Container ul,
+.Container li {
+  font-size: 1rem;
+}
 .Container a {
   display: inline-block;
+  text-decoration: underline;
 }
 .Container ul,
 .Container ol {
-  list-style: inheri;
+  padding-left: 2rem;
+}
+.Container ul {
+  list-style-type: disc;
+}
+.Container ol {
+  list-style-type: decimal;
 }
