--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -143,3 +143,98 @@ input::-moz {
   font-size: 16px;
   margin-bottom: 1.5rem;
 }
+
+/*.floorplan {
+  height: 80vh;
+  width: 80vh;
+  border: 1px solid blue;
+  background-color: silver;
+  transform: rotateX(60deg) rotateZ(45deg);
+}
+.tile {
+  display: inline-block;
+  border: 2px solid red;
+  position: relative;
+}
+.tile__inner {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  transform: rotateZ(-45deg);
+}
+.floorplan span {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%);
+}
+.img-wrapper {
+  height: 100%;
+}
+.floorplan__img {
+  height: 115%;
+  transform: rotate(-45deg) scale(1.4);
+  position: absolute;
+  bottom: 0;
+  transform-origin: 52% 56%;
+}
+[data-tile="forest"] {
+  background-color: green;
+}
+[data-tile="commercial"] {
+  background-color: yellow;
+}
+[data-tile="residential"] {
+  background-color: red;
+}
+[data-tile="industrial"] {
+  background-color: grey;
+}*/
+
+.floorplan {
+  height: 80vh;
+  width: 800px;
+  padding-top: 250px;
+}
+.floorplan__tile {
+  position: relative;
+  overflow: visible;
+  display: inline-block;
+  aspect-ratio: 4.45 / 1;
+}
+.floorplan__img {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+/* .floorplan__tile:nth-child(5n + 1) {
+  margin-left: 125px;
+} */
+[data-size="2"] div:nth-child(1),
+[data-size="2"] div:nth-child(4) {
+  margin-left: 25%;
+}
+
+[data-size="3"] div:nth-child(1),
+[data-size="3"] div:nth-child(9) {
+  margin-left: calc(100% / 3);
+}
+[data-size="3"] div:nth-child(2),
+[data-size="3"] div:nth-child(7) {
+  margin-left: calc(100% / 6);
+}
+
+[data-size="4"] div:nth-child(1),
+[data-size="4"] div:nth-child(16) {
+  margin-left: calc(37.5%);
+}
+[data-size="4"] div:nth-child(2),
+[data-size="4"] div:nth-child(14) {
+  margin-left: calc(100% / 4);
+}
+[data-size="4"] div:nth-child(4),
+[data-size="4"] div:nth-child(11) {
+  margin-left: calc(12.5%);
+}
