--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -144,59 +144,11 @@ input::-moz {
   margin-bottom: 1.5rem;
 }
 
-/*.floorplan {
-  height: 80vh;
-  width: 80vh;
-  border: 1px solid blue;
-  background-color: silver;
-  transform: rotateX(60deg) rotateZ(45deg);
-}
-.tile {
-  display: inline-block;
-  border: 2px solid red;
-  position: relative;
-}
-.tile__inner {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  transform: rotateZ(-45deg);
-}
-.floorplan span {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%);
-}
-.img-wrapper {
-  height: 100%;
-}
-.floorplan__img {
-  height: 115%;
-  transform: rotate(-45deg) scale(1.4);
-  position: absolute;
-  bottom: 0;
-  transform-origin: 52% 56%;
-}
-[data-tile="forest"] {
-  background-color: green;
-}
-[data-tile="commercial"] {
-  background-color: yellow;
-}
-[data-tile="residential"] {
-  background-color: red;
-}
-[data-tile="industrial"] {
-  background-color: grey;
-}*/
-
 .floorplan {
   height: 80vh;
   width: 800px;
   padding-top: 250px;
+  margin: 0 auto;
 }
 .floorplan__tile {
   position: relative;
