--- a/frontend/components/RawHtml/RawHtml.module.css
+++ b/frontend/components/RawHtml/RawHtml.module.css
@@ -42,7 +42,8 @@
   margin-bottom: 0.5rem;
 }
 .Container a[data-introduction-text] {
-  cursor: pointer;
+  cursor: help;
+  text-decoration: none;
   border-bottom: 1px dotted black;
 }
 .Container > *:last-child {
