--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -149,3 +149,19 @@ input::-moz {
 .defaultBlockPadding {
   @apply py-8 px-10 lg:px-16 lg:py-12;
 }
+
+.holonContentContainer {
+  max-width: 1600px;
+  margin: 0 auto;
+}
+.extra_bg {
+  position: absolute;
+  top: 0;
+  right: 100%;
+  width: 100vw;
+  height: 100%;
+}
+.inverseColumns .extra_bg {
+  left: 100%;
+  right: auto;
+}
