--- a/frontend/components/KPIDashboard/KPIItem.module.css
+++ b/frontend/components/KPIDashboard/KPIItem.module.css
@@ -68,6 +68,10 @@
   padding: 1rem 0.5rem;
   gap: 0.25rem;
 }
+.kpiHolarchy__title {
+  padding: 1rem 0.5rem 0;
+  flex: 1 1 100%;
+}
 
 .kpiHolarchy [data-class="kpiTitle"] {
   margin-right: auto;
@@ -91,6 +95,9 @@
   .kpiHolarchy > div {
     padding: 1rem 1.5rem;
     gap: 0.75rem;
+  }
+  .kpiHolarchy__title {
+    padding: 1rem 1.5rem 0;
   }
   .kpiHolarchy [data-class="kpiIcon"] {
     width: 2.5rem;
