--- a/frontend/components/KPIDashboard/KPIItem.module.css
+++ b/frontend/components/KPIDashboard/KPIItem.module.css
@@ -56,20 +56,20 @@
 
 .kpiHolarchy {
   color: #000;
-  flex: 1 0 50%;
-
   display: flex;
+  flex: 1 0 50%;
+  max-height: 90px;
 }
 .kpiHolarchy > div {
   display: flex;
   flex-direction: column;
   justify-content: center;
   flex-wrap: wrap;
-  padding: 1rem 0.5rem;
+  padding: 0rem 0.5rem;
   gap: 0.25rem;
 }
 .kpiHolarchy__title {
-  padding: 1rem 0.5rem 0;
+  padding: 0rem 0.5rem 0;
   flex: 1 1 100%;
 }
 
@@ -93,7 +93,7 @@
 
 @media (min-width: 1536px) {
   .kpiHolarchy > div {
-    padding: 1rem 1.5rem;
+    padding: 0rem 1.5rem;
     gap: 0.75rem;
   }
   .kpiHolarchy__title {
