--- a/frontend/components/KPIDashboard/KPIItem.module.css
+++ b/frontend/components/KPIDashboard/KPIItem.module.css
@@ -58,7 +58,7 @@
   color: #000;
   display: flex;
   flex: 1 0 50%;
-  max-height: 90px;
+  max-height: 65px;
 }
 .kpiHolarchy > div {
   display: flex;
@@ -71,6 +71,7 @@
 .kpiHolarchy__title {
   padding: 0rem 0.5rem 0;
   flex: 1 1 100%;
+  font-weight: 600;
 }
 
 .kpiHolarchy [data-class="kpiTitle"] {
@@ -78,7 +79,7 @@
   font-size: 1rem;
 }
 .kpiHolarchy [data-class="kpiIcon"] {
-  width: 1.5rem;
+  width: 1.2rem;
   display: flex;
   order: -1;
   flex: 1 1 100%;
@@ -91,23 +92,26 @@
   gap: 0.25rem;
 }
 
-@media (min-width: 1536px) {
+@media (min-width: 1530px) {
+  .kpiHolarchy {
+    max-height: 80px;
+  }
   .kpiHolarchy > div {
     padding: 0rem 1.5rem;
     gap: 0.75rem;
   }
   .kpiHolarchy__title {
-    padding: 1rem 1.5rem 0;
+    padding: 0.5rem 1.5rem 0;
   }
   .kpiHolarchy [data-class="kpiIcon"] {
-    width: 2.5rem;
+    width: 2.2rem;
   }
   .kpiHolarchy [data-class="kpiTitle"] {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
+    font-size: 1.1rem;
+    line-height: 1rem;
   }
   .kpiHolarchy output {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
   }
 }
 
