--- a/frontend/components/KPIDashboard/KPIItem.module.css
+++ b/frontend/components/KPIDashboard/KPIItem.module.css
@@ -74,10 +74,15 @@
   font-weight: 600;
 }
 
+.kpiHolarchy output {
+  font-size: 1.1rem;
+}
+
 .kpiHolarchy [data-class="kpiTitle"] {
   margin-right: auto;
   font-size: 1rem;
 }
+
 .kpiHolarchy [data-class="kpiIcon"] {
   width: 1.2rem;
   display: flex;
@@ -92,10 +97,7 @@
   gap: 0.25rem;
 }
 
-@media (min-width: 1530px) {
-  .kpiHolarchy {
-    max-height: 80px;
-  }
+@media (min-width: 1536px) {
   .kpiHolarchy > div {
     padding: 0rem 1.5rem;
     gap: 0.75rem;
@@ -106,6 +108,13 @@
   .kpiHolarchy [data-class="kpiIcon"] {
     width: 2.2rem;
   }
+}
+
+@media (min-height: 850px) and (min-width: 1536px) {
+  .kpiHolarchy {
+    max-height: 90px;
+  }
+
   .kpiHolarchy [data-class="kpiTitle"] {
     font-size: 1.1rem;
     line-height: 1rem;
