--- a/frontend/components/Charts/CostBenefit.module.css
+++ b/frontend/components/Charts/CostBenefit.module.css
@@ -15,7 +15,9 @@
 .Table td {
   position: relative;
   z-index: 0;
+  padding: 1rem;
 }
+
 .Table th:hover,
 .Table td:hover {
   filter: brightness(0.9);
@@ -29,4 +31,17 @@
   opacity: 1;
   transition: 0s all;
   transition-delay: 0.3s;
+}
+
+@media (max-width: 1599px) {
+  .CompactTable th,
+  .CompactTable td {
+    padding: 0.25rem;
+    font-size: 13px;
+  }
+  .CompactTable th + th span {
+    writing-mode: vertical-rl;
+    rotate: 180deg;
+    padding: 1rem 0;
+  }
 }
