--- a/frontend/components/KPIDashboard/KPIItem.module.css
+++ b/frontend/components/KPIDashboard/KPIItem.module.css
@@ -73,6 +73,9 @@
   flex: 1 1 100%;
   font-weight: 600;
 }
+.kpiHolarchy__nodata {
+  padding: 0.5rem 0.5rem 0;
+}
 
 .kpiHolarchy output {
   font-size: 1.1rem;
@@ -104,6 +107,9 @@
   }
   .kpiHolarchy__title {
     padding: 0.5rem 1.5rem 0;
+  }
+  .kpiHolarchy__nodata {
+    padding: 0rem 1.5rem;
   }
   .kpiHolarchy [data-class="kpiIcon"] {
     width: 2.2rem;
