--- a/src/holon/scripts/templates/mapper.py.j2
+++ b/src/holon/scripts/templates/mapper.py.j2
@@ -3,13 +3,17 @@
 ###################################################
 
 from rest_polymorphic.serializers import PolymorphicSerializer
+{# import all datamodels #}
 {% for module in outputs %}
 {% if module.subclasses|length > 0 %}
 from {{ module.module }} import (
+    {{ module.main_class }},
 {% for subclass in module.subclasses %}{% if not loop.last %}        {{ subclass }},
 {% else %}        {{ subclass }}{% endif %}{% endfor %}
 )
 {% endif %}{% endfor %}
+
+{# import all subserializers #}
 {% for module in outputs %}
 {% if module.subclasses|length > 0 %}
 from .{{ subserializers }} import (
@@ -17,10 +21,13 @@ from .{{ subserializers }} import (
 {% else %}        {{ subclass }}Serializer{% endif %}{% endfor %}
 )
 {% endif %}{% endfor %}
-{% for module in outputs %}{% if module.subclasses|length > 0 %}
+
+{# create the polymorphic top level serializers #}
+{% for module in outputs %}
 class {{ module.main_class }}PolymorphicSerializer(PolymorphicSerializer):
     model_serializer_mapping = {
+        {{ module.main_class }}: {{ module.main_class }}Serializer,
 {% for subclass in module.subclasses %}{% if not loop.last %}        {{ subclass }}: {{ subclass }}Serializer,
 {% else %}        {{ subclass }}: {{ subclass }}Serializer{% endif %}{% endfor %}
     }
-{% endif %}{% endfor %}
+{% endfor %}
