rotates column names of table at 1850px

--- a/frontend/components/CostBenefit/CostBenefit.module.css
+++ b/frontend/components/CostBenefit/CostBenefit.module.css
@@ -40,6 +40,9 @@
     padding-left: 0.25rem;
     font-size: 13px;
   }
+}
+
+@media (max-width: 1850px) {
   .CompactTable th + th span {
     writing-mode: vertical-rl;
     rotate: 180deg;
