--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -177,3 +177,7 @@ input::-moz {
 .buttonDark {
   @apply border-holon-blue-900  text-white bg-holon-blue-900 hover:bg-holon-blue-500 flex flex-row justify-center items-center relative rounded border-2 px-4 py-3 mb-4 min-w-[8rem] text-center font-medium leading-5 transition enabled:active:translate-x-holon-bh-x disabled:opacity-50;
 }
+
+.buttonLight {
+  @apply border-holon-blue-900  text-holon-blue-900 bg-white hover:bg-holon-blue-500 hover:text-white flex flex-row justify-center items-center relative rounded border-2 px-4 py-3 mb-4 min-w-[8rem] text-center font-medium leading-5 transition enabled:active:translate-x-holon-bh-x disabled:opacity-50;
+}
