--- a/frontend/components/InteractiveImage/ImageSlider.module.css
+++ b/frontend/components/InteractiveImage/ImageSlider.module.css
@@ -43,7 +43,7 @@
   height: 20px;
   @apply bg-holon-blue-500;
   @apply border-holon-blue-900;
-  @apply rounded-none;
+  @apply rounded-full;
   @apply appearance-none;
   --tw-shadow: 2.5px 2.5px 0 0;
   --tw-shadow-colored: 2.5px 2.5px 0 0 var(--tw-shadow-color);
