--- a/frontend/components/KPIDashboard/KPIItem.module.css
+++ b/frontend/components/KPIDashboard/KPIItem.module.css
@@ -92,6 +92,9 @@
   margin-right: auto;
   font-size: 1rem;
 }
+.kpiHolarchy [data-class="kpiTitle"] > div {
+  display: none;
+}
 
 .kpiHolarchy [data-class="kpiIcon"] {
   width: 1.2rem;
