Step indicator in Storyline
Issue #974

--- a/frontend/containers/StorylinePage/StorylinePage.module.css
+++ b/frontend/containers/StorylinePage/StorylinePage.module.css
@@ -1,2 +1,10 @@
 .StorylinePage {
+    display: flex;
+}
+
+.Steps {
+    max-width: 16rem;
+    @media (width <= 1250px) {
+        display: none;
+    }
 }
