--- a/frontend/components/Storyline/Steps/Steps.module.css
+++ b/frontend/components/Storyline/Steps/Steps.module.css
@@ -2,16 +2,16 @@
 .Steps {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     gap: 1rem;
 
     min-width: 4rem;
     position: sticky;
 
-    top: 5.75rem;
-    height: calc(100vh - 5.75rem);
+    top: 5rem;
 
     padding: 1rem;
+    padding-top: 2rem;
     z-index: 20;
 }
